--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,9 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+.firebase*
+firebase*
+firestore.*
+.firestore*
+environments*
+database.rules.json
